--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="1dp"
+    app:cardUseCompatPadding="true">
 
-    <EditText
-        android:id="@+id/et_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_title" />
+        android:layout_height="match_parent"
+        android:padding="16dp">
 
-    <EditText
-        android:id="@+id/et_director"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_director" />
 
-    <EditText
-        android:id="@+id/et_country"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_country" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:textAppearance="@android:style/TextAppearance.Large" />
 
-    <EditText
-        android:id="@+id/et_year"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_year"
-        android:inputType="number" />
+        <TextView
+            android:id="@+id/tv_director"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title" />
 
-    <EditText
-        android:id="@+id/et_protagonist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_protagonist" />
+        <LinearLayout
+            android:id="@+id/rl_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_director"
+            android:orientation="vertical"
+            android:visibility="gone">
 
-    <EditText
-        android:id="@+id/et_critics_rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_critics_rate"
-        android:inputType="number" />
+            <TextView
+                android:id="@+id/tv_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
+
+            <TextView
+                android:id="@+id/tv_protagonist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_critics_rate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
+        </LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
