--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/fragment_film_list.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/fragment_film_list.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:padding="16dp">
+    android:padding="16dp"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
 
     <android.support.design.widget.FloatingActionButton
