--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="1dp"
+    android:descendantFocusability="beforeDescendants"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
