--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/fragment_film_list.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/fragment_film_list.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:padding="16dp"
-    app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+    android:layout_height="match_parent">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:padding="16dp" />
 
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
         android:src="@drawable/ic_add_black_24dp"
         android:tint="@android:color/white" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
