--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -44,8 +44,7 @@
             <TextView
                 android:id="@+id/tv_year"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/tv_protagonist"
@@ -55,8 +54,7 @@
             <TextView
                 android:id="@+id/tv_critics_rate"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
