--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="beforeDescendants"
@@ -56,5 +57,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
+        <RatingBar
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            android:stepSize="0.5"
+            android:rating="0.0"
+            android:layout_width="235dip"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:layout_below="@+id/tv_title"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
