--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -56,17 +56,19 @@
                 android:id="@+id/tv_critics_rate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <RatingBar
+                android:layout_width="230dp"
+                android:layout_height="40dp"
+                android:id="@+id/ratingBar"
+                android:stepSize="0.5"
+                android:rating="0.0"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:transformPivotX="0dp"
+                android:transformPivotY="20dp"
+                android:layout_alignParentEnd="true" />
         </LinearLayout>
 
-        <RatingBar
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingBar"
-            android:stepSize="0.5"
-            android:rating="0.0"
-            android:layout_width="235dip"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:layout_below="@+id/tv_title"
-            android:layout_alignParentEnd="true" />
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
