--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/new_film_dialog.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/new_film_dialog.xml
@@ -36,11 +36,17 @@
         android:layout_height="wrap_content"
         android:hint="@string/newfilm_protagonist" />
 
-    <EditText
-        android:id="@+id/et_critics_rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/newfilm_critics_rate"
-        android:inputType="number" />
+
+    <RatingBar
+        android:layout_width="230dp"
+        android:layout_height="40dp"
+        android:id="@+id/ratingBar"
+        android:stepSize="0.5"
+        android:rating="0.0"
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        android:transformPivotX="0dp"
+        android:transformPivotY="20dp"
+        android:layout_alignParentEnd="true" />
 
 </LinearLayout>
