--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/new_film_dialog.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/new_film_dialog.xml
@@ -36,7 +36,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/newfilm_protagonist" />
 
-
     <RatingBar
         android:layout_width="230dp"
         android:layout_height="40dp"
@@ -46,7 +45,6 @@
         android:scaleX="0.5"
         android:scaleY="0.5"
         android:transformPivotX="0dp"
-        android:transformPivotY="20dp"
-        android:layout_alignParentEnd="true" />
+        android:transformPivotY="20dp"/>
 
 </LinearLayout>
