--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/app_bar_main.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:context="com.example.pr_idi.mydatabaseexample.ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
