Add search to left menu

--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/menu/navigation_menu.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/menu/navigation_menu.xml
@@ -13,6 +13,12 @@
             android:icon="@drawable/ic_sort_black_24dp"
             android:title="@string/action_sort" />
 
+        <item
+            android:id="@+id/search"
+            android:checkable="false"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="@string/action_search" />
+
     </group>
 
     <item android:title="@string/more">
