Add "Add button" in the menu too

--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/menu/navigation_menu.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/menu/navigation_menu.xml
@@ -18,6 +18,11 @@
             android:checkable="false"
             android:icon="@drawable/ic_search_black_24dp"
             android:title="@string/action_search" />
+        <item
+            android:id="@+id/add"
+            android:checkable="false"
+            android:icon="@drawable/ic_add_black_24dp"
+            android:title="@string/add" />
 
     </group>
 
