--- a/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
+++ b/fib-idi-android/MyFilmDatabase/app/src/main/res/layout/film_list_item.xml
@@ -34,8 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_director"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_country"
