--- a/fib-lp/p3-py/template.tmpl
+++ b/fib-lp/p3-py/template.tmpl
@@ -96,9 +96,10 @@ th {
 
 
 </style>
+<table><tr><th>Details</th><th>Bicing Stations<br>with free slots</th><th>Bicing Stations<br>with available bikes</th><th>Public Parkings<br>with free spots</th></tr>
 
 <!-- [[CONTENT]] -->
-
+</table>
 <script>
 
 function query(q) {
